able to get correct path and redirect to where form will be included to write post

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
+    "commonmark": "^0.28.1",
     "express": "^4.16.4",
     "mongoose": "^5.4.1"
   }
