--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "commonmark": "^0.28.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.23.0",
     "react": "^16.7.0",
