--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "bootstrap": "^4.2.1",
     "commonmark": "^0.28.1",
+    "prismjs": "^1.15.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-html-parser": "^2.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.2",
     "reactstrap": "^7.0.2"
