--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "commonmark": "^0.28.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.23.0",
+    "prismjs": "^1.15.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-html-parser": "^2.0.2",
     "react-moment": "^0.8.4",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
