--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "client-install": "npm install --prefix client",
     "start": "concurrently \"npm run heroku-server\" \"npm run heroku-client\"",
     "heroku-server": "node server.js",
-    "heroku-client": "npm build --prefix client && serve -s client/build",
+    "heroku-client": "npm build --prefix client",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
