--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "client-install": "npm install --prefix client",
-    "start": "concurrently \"npm run heroku-server\" \"npm run heroku-client\"",
+    "start": "npm run heroku-client && npm run heroku-server",
     "heroku-server": "node server.js",
     "heroku-client": "npm build --prefix client",
     "server": "nodemon server.js",
